# Relationship-Engine

./: .env.example  .gitignore  README.md  pyproject.toml
config/: decay_config.json
data/: events.jsonl  prompts.jsonl
docs/: ARCHITECTURE.md  CHANGELOG.md  CHECKPOINT.md  HANDOFF.md  MEMORY_FLOW.md  MEMORY_INVARIANTS.md  MEMORY_LIFECYCLE.md  MILESTONE.md  PHASE3_REPORT.md  ROADMAP.md  ROADMAP_v3.md  SESSION.md  Vision.md  debt.md
examples/: alice_demo.py
src/: __init__.py  boundary_policy.py  consumer_facade.py  context_composer.py  cross_projection_reasoner.py  dispatcher.py  event_log.py  event_types.py  interaction_pipeline.py  main.py  mcp_server.py  memory_engine.py  memory_reasoner.py  memory_selector.py  pipeline_response.py  prompt_adapter.py  protocol.py  provider.py  retrieval_ranker.py  snapshot_manager.py  storage.py  web_server.py
tests/: acceptance_test.py  conftest.py  test_consumer_facade.py  test_context_composer.py  test_context_composer.py.deprecated  test_conversation_projection.py  test_cross_projection_reasoner.py  test_dispatcher.py  test_emotion_projection.py  test_event_log.py  test_event_types.py  test_golden_context.py  test_growth_projection.py  test_interaction_pipeline.py  test_memory_suite.py  test_memory_suite.py.integration  test_person_projection.py  test_profile_projection.py  test_projection_base.py  test_prompt_adapter.py  test_prompt_builder.py  test_protocol.py  test_relationship_projection.py  test_reminder_projection.py  test_retrieval_ranker.py  test_snapshot_manager.py  test_storage.py  test_time_context_projection.py  (+1 more)
(+42 files in other folders)
